# amiwo

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  macros.rs  util.rs
src/contrib/: mod.rs
src/contrib/hyper/: mod.rs
src/contrib/rocket/: form_hashmap.rs  mod.rs  response_json.rs
src/error/: generic_error.rs  mod.rs
src/rest/: mod.rs  response_json.rs
src/traits/: mod.rs  pushable.rs
src/types/: mod.rs  one_or_many.rs  response_json.rs
src/types/rocket/: form_hashmap.rs
tests/: compile_tests.rs
tests/compile-fail/: one_or_many.rs  response_json.rs
