[package]
name = "amiwo"
version = "0.0.1"
authors = ["Boris <boris@humanenginuity.com>"]
description = "Various utility types & functions for Rust. Named after a famous Beninese dish"
repository = "https://github.com/bgbahoue/amiwo"
documentation = "https://github.com/bgbahoue/amiwo"
readme = "README.md"
#categories = ["web-programming::http-server", "development-tools"]
license = "MIT"

[dependencies]
log = "0.3.7"
rocket = "0.2.6"
rocket_codegen = "0.2.6"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[dev-dependencies]
rocket = { version = "0.2.6", features = ["testing"] }