[package]
name = "amiwo"
version = "0.0.1"
authors = ["Boris <boris@humanenginuity.com>"]
description = "Various utility types & functions for Rust. Named after a famous Beninese dish"
repository = "https://github.com/bgbahoue/amiwo"
documentation = "https://github.com/bgbahoue/amiwo"
readme = "README.md"
#categories = ["web-programming::http-server", "development-tools"]
license = "MIT"

[features]
default = []
amiwo_rocket = ["amiwo_serde"]
amiwo_serde = []

[dependencies]
log = "0.3.7"
rocket = "0.2.6"
rocket_codegen = "0.2.6"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
compiletest_rs = "*"
rocket = { version = "0.2.6", features = ["testing"] }